iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss1.local_2.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [],
          "devpath": "/devices/virtual/block/dm-11",
          "dm_name": "mpatht",
          "filesystem_type": "zfs_member",
          "fs_label": "ost19",
          "fs_uuid": "15943961459041747174",
          "major": "253",
          "minor": "11",
          "mount": null,
          "paths": [
            "/dev/mapper/mpatht",
            "/dev/disk/by-id/dm-name-mpatht",
            "/dev/disk/by-id/dm-uuid-mpath-3600140559cee8670eff45108165135b9",
            "/dev/disk/by-label/ost19",
            "/dev/disk/by-uuid/15943961459041747174",
            "/dev/dm-11"
          ],
          "scsi80": "SLIO-ORG ost10           59cee867-0eff-4510-8165-135b9e25a8f8",
          "serial": "3600140559cee8670eff45108165135b9",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:9/block/sdy",
    "filesystem_type": "mpath_member",
    "fs_label": "ost19",
    "fs_uuid": "15943961459041747174",
    "major": "65",
    "minor": "128",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-3600140559cee8670eff45108165135b9",
      "/dev/disk/by-id/wwn-0x600140559cee8670eff45108165135b9",
      "/dev/disk/by-path/fc---lun-9",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-9",
      "/dev/disk/by-label/ost19",
      "/dev/disk/by-uuid/15943961459041747174",
      "/dev/sdy"
    ],
    "scsi80": "SLIO-ORG ost10           59cee867-0eff-4510-8165-135b9e25a8f8",
    "serial": "3600140559cee8670eff45108165135b9",
    "size": 5368709120
  }
}
