iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss1.local_21.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [],
          "devpath": "/devices/virtual/block/dm-3",
          "dm_name": "mpathj",
          "filesystem_type": "zfs_member",
          "fs_label": "ost9",
          "fs_uuid": "15404256632694394711",
          "major": "253",
          "minor": "3",
          "mount": null,
          "paths": [
            "/dev/mapper/mpathj",
            "/dev/disk/by-id/dm-name-mpathj",
            "/dev/disk/by-id/dm-uuid-mpath-3600140501ea0e9be348404db44d11f4b",
            "/dev/disk/by-label/ost9",
            "/dev/disk/by-uuid/15404256632694394711",
            "/dev/dm-3"
          ],
          "scsi80": "SLIO-ORG ost18           01ea0e9b-e348-404d-b44d-11f4b119c511",
          "serial": "3600140501ea0e9be348404db44d11f4b",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:17/block/sdi",
    "filesystem_type": "mpath_member",
    "fs_label": "ost9",
    "fs_uuid": "15404256632694394711",
    "major": "8",
    "minor": "128",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-3600140501ea0e9be348404db44d11f4b",
      "/dev/disk/by-id/wwn-0x600140501ea0e9be348404db44d11f4b",
      "/dev/disk/by-path/fc---lun-17",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-17",
      "/dev/disk/by-label/ost9",
      "/dev/disk/by-uuid/15404256632694394711",
      "/dev/sdi"
    ],
    "scsi80": "SLIO-ORG ost18           01ea0e9b-e348-404d-b44d-11f4b119c511",
    "serial": "3600140501ea0e9be348404db44d11f4b",
    "size": 5368709120
  }
}
